ADD 1. 리스트 데이터 받아오는 부분 완료 2. 셀 추가 작업 중

--- a/board.ios/Views/Main/MainList.storyboard
+++ b/board.ios/Views/Main/MainList.storyboard
@@ -1,41 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ute-4n-0XG">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Root View Controller-->
-        <scene sceneID="vYU-X3-p7x">
-            <objects>
-                <tableViewController id="xgi-hs-JO8" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="IBl-tp-UKI">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="zzw-KK-jE1">
-                                <rect key="frame" x="0.0" y="44.5" width="414" height="43.5"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="zzw-KK-jE1" id="oqy-Oo-rhO">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="xgi-hs-JO8" id="ryX-Yv-eEu"/>
-                            <outlet property="delegate" destination="xgi-hs-JO8" id="wNP-Rd-pEC"/>
-                        </connections>
-                    </tableView>
-                    <navigationItem key="navigationItem" title="Root View Controller" id="4Ll-YW-Ni6"/>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="OVq-sf-Zgr" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-535" y="-16"/>
-        </scene>
         <!--Navigation Controller-->
         <scene sceneID="HS2-kY-dIa">
             <objects>
@@ -45,12 +17,57 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="xgi-hs-JO8" kind="relationship" relationship="rootViewController" id="V21-mv-qqr"/>
+                        <segue destination="d0v-Kl-aD5" kind="relationship" relationship="rootViewController" id="VK3-jz-rn8"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hpG-xh-byg" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1332" y="-16"/>
+        </scene>
+        <!--Main List View Controller-->
+        <scene sceneID="v6C-fZ-Uam">
+            <objects>
+                <viewController id="d0v-Kl-aD5" customClass="MainListViewController" customModule="board_ios" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="7YM-q2-gHw">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="ujR-gR-VbD">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="yHj-p1-j1T">
+                                        <rect key="frame" x="0.0" y="44.5" width="414" height="43.5"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="yHj-p1-j1T" id="jSx-kG-oZV" customClass="BoardListCell" customModule="board_ios" customModuleProvider="target">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="d0v-Kl-aD5" id="Iyc-al-4hF"/>
+                                    <outlet property="delegate" destination="d0v-Kl-aD5" id="tM2-LF-9Qe"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="MUc-SA-H96"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="ujR-gR-VbD" firstAttribute="top" secondItem="MUc-SA-H96" secondAttribute="top" id="2K5-iv-4wO"/>
+                            <constraint firstItem="MUc-SA-H96" firstAttribute="bottom" secondItem="ujR-gR-VbD" secondAttribute="bottom" id="J9Q-6e-ahP"/>
+                            <constraint firstItem="MUc-SA-H96" firstAttribute="trailing" secondItem="ujR-gR-VbD" secondAttribute="trailing" id="nM5-gT-IHq"/>
+                            <constraint firstItem="ujR-gR-VbD" firstAttribute="leading" secondItem="MUc-SA-H96" secondAttribute="leading" id="vHU-9M-8GU"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="0vO-pG-MJI"/>
+                    <connections>
+                        <outlet property="tableView" destination="ujR-gR-VbD" id="1I8-BB-FL8"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="f6q-Am-9ag" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-470" y="-16"/>
         </scene>
     </scenes>
     <resources>
