--- a/board.ios/Views/Main/BoadListCell.xib
+++ b/board.ios/Views/Main/BoadListCell.xib
@@ -9,15 +9,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="80" id="gPg-mI-bhY">
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="cell" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="80" id="gPg-mI-bhY" customClass="BoardListCell" customModule="board_ios" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="414" height="80"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="gPg-mI-bhY" id="2G5-a2-NXa">
                 <rect key="frame" x="0.0" y="0.0" width="414" height="80"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YaW-nG-AUd">
-                        <rect key="frame" x="20" y="10" width="33" height="11.5"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YaW-nG-AUd">
+                        <rect key="frame" x="20" y="10" width="28.5" height="11.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -41,7 +41,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="(10)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RL5-Jn-QXg">
-                        <rect key="frame" x="58" y="8.5" width="22.5" height="14.5"/>
+                        <rect key="frame" x="53.5" y="8.5" width="22.5" height="14.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -77,6 +77,14 @@
                     <constraint firstItem="YaW-nG-AUd" firstAttribute="top" secondItem="2G5-a2-NXa" secondAttribute="top" constant="10" id="sbd-jK-XC4"/>
                 </constraints>
             </tableViewCellContentView>
+            <connections>
+                <outlet property="BoardListCell" destination="2G5-a2-NXa" id="MlK-Sq-JyD"/>
+                <outlet property="Title" destination="YaW-nG-AUd" id="coA-hQ-waV"/>
+                <outlet property="content" destination="HEc-xc-mIQ" id="HhG-rf-UTG"/>
+                <outlet property="date" destination="cP1-gG-B5H" id="O8j-w1-Wkb"/>
+                <outlet property="nickName" destination="2dK-EH-beW" id="6tq-nG-UVB"/>
+                <outlet property="views" destination="mgY-2y-0eu" id="rzX-gN-Rpq"/>
+            </connections>
             <point key="canvasLocation" x="134.78260869565219" y="61.607142857142854"/>
         </tableViewCell>
     </objects>
