ADD 1. 뉴 포스트, 디테일 및 댓글 리스트

--- a/board.ios/Views/Main/MainTab.storyboard
+++ b/board.ios/Views/Main/MainTab.storyboard
@@ -27,11 +27,22 @@
                     </tabBar>
                     <connections>
                         <segue destination="bfL-9r-1x7" kind="relationship" relationship="viewControllers" id="ylQ-A9-LJr"/>
+                        <segue destination="ZoI-y8-Z7e" kind="relationship" relationship="viewControllers" id="xjW-rT-jgl"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Dqx-tz-T6e" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-3493" y="-504"/>
+        </scene>
+        <!--CategoryList-->
+        <scene sceneID="QDJ-oa-GfR">
+            <objects>
+                <viewControllerPlaceholder storyboardName="CategoryList" id="ZoI-y8-Z7e" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="RnM-eW-DZg"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="u2Q-Ty-EAh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2788" y="-655"/>
         </scene>
     </scenes>
 </document>
