--- a/board.ios/Views/Board/NewPost.storyboard
+++ b/board.ios/Views/Board/NewPost.storyboard
@@ -1,25 +1,83 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17150" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Y6W-OH-hqX">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17122"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--New Post View Controller-->
         <scene sceneID="s0d-6b-0kx">
             <objects>
-                <viewController id="Y6W-OH-hqX" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="NewPost" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Y6W-OH-hqX" customClass="NewPostViewController" customModule="board_ios" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="제목" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DuZ-6r-zzr">
+                                <rect key="frame" x="20" y="58" width="30" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="EuO-oz-elt">
+                                <rect key="frame" x="20" y="87" width="374" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="내용" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lw8-YS-4dL">
+                                <rect key="frame" x="20" y="129" width="29.5" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6cR-Nv-73e">
+                                <rect key="frame" x="20" y="158" width="374" height="300"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="300" id="gDy-qx-kd5"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Okn-zn-ZB2">
+                                <rect key="frame" x="20" y="827" width="374" height="35"/>
+                                <color key="tintColor" red="0.23137254900000001" green="0.31372549020000001" blue="0.80784313730000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" title="저장"/>
+                                <connections>
+                                    <action selector="submit:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="rkR-Ld-FR9"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Okn-zn-ZB2" firstAttribute="bottom" secondItem="vDu-zF-Fre" secondAttribute="bottom" id="7Uw-Zk-9AS"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="6cR-Nv-73e" secondAttribute="trailing" constant="20" id="8ge-f1-Jd9"/>
+                            <constraint firstItem="EuO-oz-elt" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="BlY-HE-6NO"/>
+                            <constraint firstItem="lw8-YS-4dL" firstAttribute="top" secondItem="EuO-oz-elt" secondAttribute="bottom" constant="8" symbolic="YES" id="CMO-U5-r4v"/>
+                            <constraint firstItem="EuO-oz-elt" firstAttribute="top" secondItem="DuZ-6r-zzr" secondAttribute="bottom" constant="8" symbolic="YES" id="FXY-Xe-U7G"/>
+                            <constraint firstItem="DuZ-6r-zzr" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="Uz2-Vb-gBm"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="Okn-zn-ZB2" secondAttribute="trailing" constant="20" id="V6H-3C-Yk1"/>
+                            <constraint firstItem="DuZ-6r-zzr" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="10" id="ZtX-Yh-TW7"/>
+                            <constraint firstItem="lw8-YS-4dL" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="dfB-cC-uja"/>
+                            <constraint firstItem="6cR-Nv-73e" firstAttribute="top" secondItem="lw8-YS-4dL" secondAttribute="bottom" constant="8" symbolic="YES" id="eby-uj-70O"/>
+                            <constraint firstItem="Okn-zn-ZB2" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="jSO-vE-rMu"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="EuO-oz-elt" secondAttribute="trailing" constant="20" id="odn-2P-28E"/>
+                            <constraint firstItem="6cR-Nv-73e" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="tVF-W4-Z07"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="postContent" destination="6cR-Nv-73e" id="2pF-Fp-UW8"/>
+                        <outlet property="postTitle" destination="EuO-oz-elt" id="JMv-at-mop"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="46" y="60"/>
         </scene>
     </scenes>
     <resources>
