--- a/board.ios/Views/Main/MainList.storyboard
+++ b/board.ios/Views/Main/MainList.storyboard
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ute-4n-0XG">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ute-4n-0XG">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
+        <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -13,7 +15,7 @@
             <objects>
                 <navigationController id="ute-4n-0XG" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="m8A-4c-lSf">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <rect key="frame" x="0.0" y="48" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
@@ -33,11 +35,11 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="ujR-gR-VbD">
-                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <rect key="frame" x="0.0" y="92" width="414" height="770"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="cell" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="BoardListCell" rowHeight="80" id="cve-CC-FPq" customClass="BoardListCell" customModule="board_ios" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="44.5" width="414" height="80"/>
+                                        <rect key="frame" x="0.0" y="50" width="414" height="80"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="cve-CC-FPq" id="7V3-Yo-L1E">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="80"/>
@@ -108,6 +110,7 @@
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="Title" destination="hqh-3x-k0S" id="U40-z3-MCg"/>
+                                            <outlet property="comments" destination="zH1-dc-b2Q" id="SHl-P7-i2c"/>
                                             <outlet property="content" destination="n4B-iu-6Bw" id="pqV-ei-Hi0"/>
                                             <outlet property="date" destination="9Vl-jz-YS4" id="HyL-CV-VOc"/>
                                             <outlet property="nickName" destination="6Mf-zL-S9Q" id="rjA-yh-Bzw"/>
@@ -120,12 +123,42 @@
                                     <outlet property="delegate" destination="d0v-Kl-aD5" id="tM2-LF-9Qe"/>
                                 </connections>
                             </tableView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="V8H-YM-E46">
+                                <rect key="frame" x="354" y="802" width="50" height="50"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XRu-4K-gY2">
+                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain">
+                                            <imageReference key="image" image="plus" catalog="system" symbolScale="medium" variableValue="1"/>
+                                            <backgroundConfiguration key="background" cornerRadius="25">
+                                                <color key="backgroundColor" red="0.23137254900000001" green="0.31372549020000001" blue="0.80784313730000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            </backgroundConfiguration>
+                                            <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </buttonConfiguration>
+                                        <connections>
+                                            <action selector="toAdd:" destination="d0v-Kl-aD5" eventType="touchUpInside" id="uDs-db-5Wb"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="XRu-4K-gY2" secondAttribute="trailing" id="LJu-aD-nWu"/>
+                                    <constraint firstItem="XRu-4K-gY2" firstAttribute="top" secondItem="V8H-YM-E46" secondAttribute="top" id="XIf-wP-Hex"/>
+                                    <constraint firstAttribute="bottom" secondItem="XRu-4K-gY2" secondAttribute="bottom" id="ZQf-nq-F5H"/>
+                                    <constraint firstAttribute="height" constant="50" id="cFh-8G-nek"/>
+                                    <constraint firstItem="XRu-4K-gY2" firstAttribute="leading" secondItem="V8H-YM-E46" secondAttribute="leading" id="cLG-VB-1oJ"/>
+                                    <constraint firstAttribute="width" constant="50" id="zaG-9r-hls"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="MUc-SA-H96"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="ujR-gR-VbD" firstAttribute="top" secondItem="MUc-SA-H96" secondAttribute="top" id="2K5-iv-4wO"/>
+                            <constraint firstItem="MUc-SA-H96" firstAttribute="trailing" secondItem="V8H-YM-E46" secondAttribute="trailing" constant="10" id="60v-XF-APN"/>
                             <constraint firstItem="MUc-SA-H96" firstAttribute="bottom" secondItem="ujR-gR-VbD" secondAttribute="bottom" id="J9Q-6e-ahP"/>
+                            <constraint firstItem="MUc-SA-H96" firstAttribute="bottom" secondItem="V8H-YM-E46" secondAttribute="bottom" constant="10" id="iFQ-rv-Mhn"/>
                             <constraint firstItem="MUc-SA-H96" firstAttribute="trailing" secondItem="ujR-gR-VbD" secondAttribute="trailing" id="nM5-gT-IHq"/>
                             <constraint firstItem="ujR-gR-VbD" firstAttribute="leading" secondItem="MUc-SA-H96" secondAttribute="leading" id="vHU-9M-8GU"/>
                         </constraints>
@@ -141,6 +174,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="plus" catalog="system" width="128" height="113"/>
         <systemColor name="separatorColor">
             <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.28999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
